official changelog for ephFrame
===========================================================================

2009-10-02
+	Added Paginator Helper that makes pagintion easier to use!
+	Added and changed docu for HTML Helper
+	Fixed String::prepend to use conditional string correctly
+	moved ephFrame path decision from index.php ino ephFrame.php
+	Added AppHelper class with various callbacks
+	All basic components extend from AppComponent now
+ 	Added /console/console.php script that loads console tasks
+	Helpers now can access controller by $this->controller if set
+	HTML Helper uses $theme from controller to link images right

2009-09-17
+	Dynamic Binding with bind() works again with aliases
+	Some Email and CSV class related fixes

2009-09-11
+	now php 5.3 compatible
	removed depreciated function calls (split -> explode)
	set_magic_quotes_runtime
+	fixed bug where email validation fails on emails like l.name@host.com

2009-09-03
+	Model COnditions like this array('User.id' => array('1','2','5')) will
	create a IN (1,2,5) query (no properly quoting yet!)
+	Added Email Component from ephFrame 0.1 refactored
+	Email Component logs emails to log directory if $delivery is set to
 	'debug' for testing
+	Email can send UTF8 subjects now including german umlauts! (tested on
	OSX Mail and Webmail mobileme.com and iPhone)
+	Email Component attach files that are not there:
	->attach($filename, $content)

2009-08-29
+	added up and low as alias for upper and lower in String helper

2009-08-21
+	moves isEmpty to core.php file so that the method is available everywhere
	also changed logic to it returns the first argument passed that is not
	empty() and renamed it to coalesce (removed old coalesce method)
+	added whitelist filter to Hash class that removes all keys that are not
	in the whitelist of keys
+	added uri and url method to router class
+	added default HitCount Behavior to Behaviors that can increase single